--- a/NetBeansProjects/Streaming Service/nbproject/project.properties
+++ b/NetBeansProjects/Streaming Service/nbproject/project.properties
@@ -40,15 +40,21 @@ dist.jlink.output=${dist.jlink.dir}/Streaming_Service
 endorsed.classpath=
 excludes=
 file.reference.gson-2.8.0.jar=/Users/frankienglish/Documents/327/gson-2.8.0.jar
+file.reference.gson-2.8.0.jar-1=../../327JAR/gson-2.8.0.jar
 file.reference.jl1.0.1.jar=/Users/frankienglish/Documents/327/jl1.0.1.jar
+file.reference.jl1.0.1.jar-1=../../327JAR/jl1.0.1.jar
 file.reference.json-simple-1.1.1.jar=/Users/frankienglish/Documents/327/json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar-1=../../327JAR/json-simple-1.1.1.jar
 file.reference.Streaming_Service-src=../../Eclipse Workspace/Streaming Service/src
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.0.jar}:\
     ${file.reference.jl1.0.1.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.gson-2.8.0.jar-1}:\
+    ${file.reference.jl1.0.1.jar-1}:\
+    ${file.reference.json-simple-1.1.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
